--- a/Coke/Coke.vcxproj
+++ b/Coke/Coke.vcxproj
@@ -81,13 +81,13 @@
     <ClCompile Include="main.c" />
     <ClCompile Include="MenuMain.c" />
     <ClCompile Include="SelectMenu.c" />
-    <ClCompile Include="Shortcut.c" />
+    <ClCompile Include="ShortcutMain.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CokeCanDelegateInit.h" />
     <ClInclude Include="MenuMain.h" />
     <ClInclude Include="SelectMenu.h" />
-    <ClInclude Include="Shortcut.h" />
+    <ClInclude Include="ShortcutMain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
