--- a/IceCube/IceCube.vcxproj.filters
+++ b/IceCube/IceCube.vcxproj.filters
@@ -11,5 +11,6 @@
   <ItemGroup>
     <ClInclude Include="IceCube.h" />
     <ClInclude Include="IceCubeDelegate.h" />
+    <ClInclude Include="WebRequest.h" />
   </ItemGroup>
 </Project>
